@@ -25,8 +25,6 @@ import org.gradle.api.JavaVersion
 import org.gradle.api.Named
 import org.gradle.api.Plugin
 import org.gradle.api.Project
-import org.gradle.api.artifacts.ComponentMetadataContext
-import org.gradle.api.artifacts.ComponentMetadataRule
 import org.gradle.api.tasks.bundling.Jar
 import org.gradle.api.tasks.compile.AbstractCompile
 import org.gradle.api.tasks.compile.CompileOptions
@@ -37,28 +35,61 @@ import org.gradle.build.ClasspathManifest
 import org.gradle.gradlebuild.BuildEnvironment
 import org.gradle.gradlebuild.BuildEnvironment.agentNum
 import org.gradle.gradlebuild.java.AvailableJavaInstallations
-import org.gradle.internal.jvm.Jvm
 import org.gradle.kotlin.dsl.*
+import org.gradle.plugins.ide.idea.IdeaPlugin
+import org.gradle.plugins.ide.idea.model.IdeaModel
 import org.gradle.process.CommandLineArgumentProvider
-import testLibraries
+import java.util.concurrent.Callable
 import testLibrary
 import java.util.jar.Attributes
 
 
-enum class ModuleType(val source: JavaVersion, val target: JavaVersion) {
-    UNDEFINED(JavaVersion.VERSION_1_1, JavaVersion.VERSION_1_1),
-    ENTRY_POINT(JavaVersion.VERSION_1_5, JavaVersion.VERSION_1_5),
-    WORKER(JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6),
-    CORE(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    PLUGIN(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    INTERNAL(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    REQUIRES_JAVA_8(JavaVersion.VERSION_1_8, JavaVersion.VERSION_1_8)
+enum class ModuleType(val compatibility: JavaVersion) {
+
+    /**
+     * This module type is used by modules that contain code that is used by one
+     * of the entry points of using Gradle, such as the Wrapper, the Launcher
+     * and the Tooling API.
+     * Such entry points need to run on older Java versions than those parts of
+     * the codebase are executed from builds, if only to print a message
+     * indicating that the old JDK is not supported anymore.
+     */
+    ENTRY_POINT(JavaVersion.VERSION_1_6),
+
+    /**
+     * This module type is used by modules that contain code that needs to
+     * be able to run in worker JVMs where we usually support older Java
+     * versions.
+     * Some of these modules use APIs that are not available in the specified
+     * Java version but only in parts that are not called from workers.
+     */
+    WORKER(JavaVersion.VERSION_1_6),
+
+    /**
+     * This module type is used by all modules that end up in the distribution
+     * and are not used by entry points or workers.
+     */
+    CORE(JavaVersion.VERSION_1_8),
+
+    /**
+     * This module type is used by internal modules that are not part of
+     * the distribution.
+     */
+    INTERNAL(JavaVersion.VERSION_1_8),
+
+    /**
+     * This module type is used for one-off modules that would normally use
+     * {@link #ENTRY_POINT} or {@link #WORKER} but explicitly require Java 8,
+     * e.g. due to the requirements of a downstream dependency (e.g. JUnit
+     * Platform).
+     */
+    REQUIRES_JAVA_8(JavaVersion.VERSION_1_8)
 }
 
 
 class UnitTestAndCompilePlugin : Plugin<Project> {
     override fun apply(project: Project): Unit = project.run {
-        apply { plugin("groovy") }
+        apply(plugin = "groovy")
 
         val extension = extensions.create<UnitTestAndCompileExtension>("gradlebuildJava", this)
 
@@ -92,35 +123,42 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
         options.isFork = true
         options.encoding = "utf-8"
         options.compilerArgs = mutableListOf("-Xlint:-options", "-Xlint:-path")
-        val targetJdkVersion = maxOf(compileTask.project.java.targetCompatibility, JavaVersion.VERSION_1_7)
-        val jdkForCompilation = availableJavaInstallations.jdkForCompilation(targetJdkVersion)
+        val jdkForCompilation = availableJavaInstallations.javaInstallationForCompilation
         if (!jdkForCompilation.current) {
             options.forkOptions.javaHome = jdkForCompilation.javaHome
         }
-        compileTask.inputs.property("javaInstallation", when (compileTask) {
-            is JavaCompile -> jdkForCompilation
-            else -> availableJavaInstallations.currentJavaInstallation
-        }.displayName)
+        compileTask.inputs.property("javaInstallation", Callable {
+            when (compileTask) {
+                is JavaCompile -> jdkForCompilation
+                else -> availableJavaInstallations.currentJavaInstallation
+            }.vendorAndMajorVersion
+        })
     }
 
     private
     fun Project.addGeneratedResources(gradlebuildJava: UnitTestAndCompileExtension) {
-        val classpathManifest = tasks.register("classpathManifest", ClasspathManifest::class.java)
+        val classpathManifest = tasks.register("classpathManifest", ClasspathManifest::class)
         java.sourceSets["main"].output.dir(mapOf("builtBy" to classpathManifest), gradlebuildJava.generatedResourcesDir)
+        plugins.withType<IdeaPlugin> {
+            configure<IdeaModel> {
+                module {
+                    resourceDirs = resourceDirs + gradlebuildJava.generatedResourcesDir
+                    testResourceDirs = testResourceDirs + gradlebuildJava.generatedTestResourcesDir
+                }
+            }
+        }
     }
 
     private
     fun Project.addDependencies() {
         dependencies {
             val testCompile = configurations.getByName("testCompile")
+            val testRuntime = configurations.getByName("testRuntime")
             testCompile(library("junit"))
             testCompile(library("groovy"))
             testCompile(testLibrary("spock"))
-            testLibraries("jmock").forEach { testCompile(it) }
-
-            components {
-                withModule("org.spockframework:spock-core", SpockCoreRule::class.java)
-            }
+            testRuntime(testLibrary("bytebuddy"))
+            testRuntime(library("objenesis"))
         }
     }
 
@@ -151,14 +189,20 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
         tasks.withType<Test>().configureEach {
             maxParallelForks = project.maxParallelForks
             jvmArgumentProviders.add(createCiEnvironmentProvider(this))
-            executable = Jvm.forHome(javaInstallationForTest.javaHome).javaExecutable.absolutePath
+            executable = javaInstallationForTest.jvm.javaExecutable.absolutePath
             environment["JAVA_HOME"] = javaInstallationForTest.javaHome.absolutePath
             if (javaInstallationForTest.javaVersion.isJava7) {
                 // enable class unloading
                 jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
             }
+            if (javaInstallationForTest.javaVersion.isJava9Compatible) {
+                //allow embedded executer to modify environment variables
+                jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+                //allow embedded executer to inject legacy types into the system classloader
+                jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            }
             // Includes JVM vendor and major version
-            inputs.property("javaInstallation", javaInstallationForTest.displayName)
+            inputs.property("javaInstallation", Callable { javaInstallationForTest.vendorAndMajorVersion })
             doFirst {
                 if (BuildEnvironment.isCiServer) {
                     logger.lifecycle("maxParallelForks for '$path' is $maxParallelForks")
@@ -174,7 +218,7 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
 
             override fun asArguments(): Iterable<String> {
                 return if (BuildEnvironment.isCiServer) {
-                    mapOf(
+                    getRepoMirrorSystemProperties() + mapOf(
                         "org.gradle.test.maxParallelForks" to test.maxParallelForks,
                         "org.gradle.ci.agentCount" to 2,
                         "org.gradle.ci.agentNum" to agentNum
@@ -187,45 +231,36 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
             }
         }
     }
+
+    private
+    fun getRepoMirrorSystemProperties(): List<String> = collectMirrorUrls().map {
+        "-Dorg.gradle.integtest.mirrors.${it.key}=${it.value}"
+    }
+
+    private
+    fun collectMirrorUrls(): Map<String, String> =
+    // expected env var format: repo1_id:repo1_url,repo2_id:repo2_url,...
+        System.getenv("REPO_MIRROR_URLS")?.split(',')?.associate { nameToUrl ->
+            val (name, url) = nameToUrl.split(':', limit = 2)
+            name to url
+        } ?: emptyMap()
 }
 
 
 open class UnitTestAndCompileExtension(val project: Project) {
     val generatedResourcesDir = project.file("${project.buildDir}/generated-resources/main")
     val generatedTestResourcesDir = project.file("${project.buildDir}/generated-resources/test")
-    var moduleType: ModuleType = ModuleType.UNDEFINED
+    var moduleType: ModuleType? = null
         set(value) {
-            field = value
-            // Entry points should run against Java so that we can give good error messages for people trying to run
-            // Gradle on Java 5. But Java 9 no longer support Java 5. Therefore, to be able to build Gradle on Java 9,
-            // we need to change the version to the minimum supported one.
-            if (BuildEnvironment.javaVersion.isJava9Compatible && moduleType == ModuleType.ENTRY_POINT) {
-                project.java.sourceCompatibility = JavaVersion.VERSION_1_6
-                project.java.targetCompatibility = JavaVersion.VERSION_1_6
-            } else {
-                project.java.targetCompatibility = moduleType.target
-                project.java.sourceCompatibility = moduleType.source
-            }
+            field = value!!
+            project.java.targetCompatibility = value.compatibility
+            project.java.sourceCompatibility = value.compatibility
         }
 
     init {
         project.afterEvaluate {
-            if (this@UnitTestAndCompileExtension.moduleType == ModuleType.UNDEFINED) {
+            if (this@UnitTestAndCompileExtension.moduleType == null) {
                 throw InvalidUserDataException("gradlebuild.moduletype must be set for project $project")
-            }
-        }
-    }
-}
-
-
-open class SpockCoreRule : ComponentMetadataRule {
-    override fun execute(context: ComponentMetadataContext) {
-        context.details.allVariants {
-            withDependencyConstraints {
-                filter { it.group == "org.objenesis" }.forEach {
-                    it.version { prefer("1.2") }
-                    it.because("1.2 is required by Gradle and part of the distribution")
-                }
             }
         }
     }
