@@ -17,12 +17,12 @@
 package org.gradle.launcher.daemon
 
 import org.gradle.integtests.fixtures.daemon.DaemonIntegrationSpec
+import org.gradle.integtests.fixtures.timeout.IntegrationTestTimeout
 import org.gradle.launcher.daemon.logging.DaemonMessages
 import org.gradle.test.fixtures.file.LeaksFileHandles
 import org.gradle.util.GradleVersion
 import org.gradle.util.Requires
 import org.gradle.util.TestPrecondition
-import spock.lang.Timeout
 
 import static org.gradle.test.fixtures.ConcurrentTestUtil.poll
 
@@ -61,7 +61,7 @@ task sleep {
         }
     }
 
-    @Timeout(25)
+    @IntegrationTestTimeout(25)
     def "promptly shows decent message when daemon cannot be started"() {
         when:
         executer.withArguments("-Dorg.gradle.jvmargs=-Xyz").run()
@@ -159,7 +159,8 @@ task sleep {
     }
 
     //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
-    @Requires(TestPrecondition.NOT_JDK_IBM)
+    //Java 9 and above needs --add-opens to make environment variable mutation work
+    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
     def "foreground daemon log honors log levels for logging"() {
         given:
         file("build.gradle") << """
